Rewritten Implementacija chapter

--- a/Slike/admitance_step.tex
+++ b/Slike/admitance_step.tex
@@ -1,21 +1,35 @@
 
+%\begin{figure}
+%	\centering
+%	\subfigure[$ h_{ref_z}(t_1) = -50 $ N]{%
+%		\includegraphics[scale=0.3]{./Slike/figure_0_hz_1.eps}
+%		\label{fig:admitance_step_1}}
+%	\quad
+%	\subfigure[$ h_{ref_z}(t_1) = -20$ N]{%
+%	\includegraphics[scale=0.3]{./Slike/figure_0_hz_2.eps}
+%		\label{fig:admitance_step_2}}
+%	\subfigure[$ h_{ref_z}(t_1) = -50 $ N]{%
+%	\includegraphics[scale=0.3]{./Slike/figure_0_hz_5.eps}
+%		\label{fig:admitance_step_5}}
+%	\quad
+%	\subfigure[$ h_{ref_z}(t_1) = -100 $ N]{%
+%	\includegraphics[scale=0.3]{./Slike/figure_0_hz_10.eps}
+%		\label{fig:admitance_step_10}}
+%	%
+%	\caption{Odziv robota na stopni\v{c}ast signal sile.}
+%	\label{fig:admitance_step}
+%\end{figure}
+
 \begin{figure}
 	\centering
-	\subfigure[$ h_{ref_z}(t_1) = -10 $ N]{%
-		\includegraphics[scale=0.3]{./Slike/figure_0_hz_1.eps}
-		\label{fig:admitance_step_1}}
+	\subfigure[Odziv na stopnico pri vzor\v{c}nem \v{c}asu 100 Hz]{%
+		\includegraphics[scale=0.5]{./Slike/figure_0_hz_5.eps}
+		\label{fig:admitance_step_100}}
 	\quad
-	\subfigure[$ h_{ref_z}(t_1) = -20$ N]{%
-	\includegraphics[scale=0.3]{./Slike/figure_0_hz_2.eps}
-		\label{fig:admitance_step_2}}
-	\subfigure[$ h_{ref_z}(t_1) = -50 $ N]{%
-	\includegraphics[scale=0.3]{./Slike/figure_0_hz_5.eps}
-		\label{fig:admitance_step_5}}
-	\quad
-	\subfigure[$ h_{ref_z}(t_1) = -100 $ N]{%
-	\includegraphics[scale=0.3]{./Slike/figure_0_hz_10.eps}
-		\label{fig:admitance_step_10}}
-	%
-	\caption{Odziv robota na stopni\v{c}ast signal sile.}
+	\subfigure[Odziv na stopnico pri vzor\v{c}nem \v{c}asu 500 Hz]{%
+		\includegraphics[scale=0.5]{./Slike/figure_0_hz_100dt.eps}
+		\label{fig:admitance_step_500}}
+
+	\caption{Odziv robota pri admitan\v{c}nem vodenju na signal stopnice pri vzor\v{c}nem \v{c}asu 100 Hz in 500 Hz .}
 	\label{fig:admitance_step}
 \end{figure}
