--- a/Slike/follow_sine.tex
+++ b/Slike/follow_sine.tex
@@ -1,6 +1,13 @@
-\begin{figure}
+\begin{figure}[!ht]
 	\centering
-	\includegraphics[scale=0.5]{./Slike/follow_sine.eps}
-	\caption{Odziv sklepa na signal sinusne oblike.}
+	\subfigure[Sledenje sinusnemu signalu pri vzor\v{c}nem \v{c}asu 100 Hz.]
+	{
+		\includegraphics[trim={0 0cm 0 0cm},scale=0.5]{./Slike/sine_100hz_err.eps}
+	}
+	\subfigure[Sledenje sinusnemu signalu pri vzor\v{c}nem \v{c}asu 500 Hz.]
+	{
+		\includegraphics[trim={0 0cm 0 0cm},scale=0.5]{./Slike/sine_500hz_err.eps}
+	}
+	\caption{Odziv vrha po \textit{x} osi na signal sinusne oblike s spreminjajo\v{c}o se frekvenco za vzor\v{c}ni \v{c}as 100 Hz in 500 Hz.}
 	\label{fig:follow_sine}
 \end{figure}
