--- a/Slike/pa10jr3.tex
+++ b/Slike/pa10jr3.tex
@@ -1,6 +1,6 @@
 \begin{figure}
 	\centering
 	\includegraphics[scale = 0.25]{./Slike/pa10jr3.png}
-	\caption{Vrh robota PA-10 s pritrjenim senzorjem sil in navorov JR3.}
+	\caption{Vrh robota PA-10 s pritrjenim senzorjem sil in navorov JR3 v kontaktu z okolico.}
 	\label{fig:pa10jr3}
 \end{figure}
