--- a/Slike/torque_follow_sine.tex
+++ b/Slike/torque_follow_sine.tex
@@ -1,6 +1,20 @@
+%\begin{figure}
+%	\centering
+%	\includegraphics[scale=0.5]{./Slike/torque_follow_sine.eps}
+%	\caption{Odziv sklepa na signal sinusne oblike.}
+%	\label{fig:torque_follow_sine}
+%\end{figure}
+
 \begin{figure}
 	\centering
-	\includegraphics[scale=0.5]{./Slike/torque_follow_sine.eps}
-	\caption{Odziv sklepa na signal sinusne oblike.}
+	\subfigure[Sledenje sinusnemu signalu pri vzor\v{c}nem \v{c}asu 100 Hz.]
+	{
+		\includegraphics[trim={0 6cm 0 10cm},scale=0.5]{./Slike/follow_sine_100hz_tq.pdf}
+	}
+	\subfigure[Sledenje sinusnemu signalu pri vzor\v{c}nem \v{c}asu 500 Hz.]
+	{
+		\includegraphics[trim={0 6cm 0 5cm},scale=0.5]{./Slike/follow_sine_500hz_tq.pdf}
+	}
+	\caption{Odziv vrha po \textit{x} osi na signal sinusne oblike s spreminjajo\v{c}o se frekvenco za vzor\v{c}ni \v{c}as 100 Hz in 500 Hz.}
 	\label{fig:torque_follow_sine}
 \end{figure}
